# spice-vision

./: README.md  pyproject.toml
spice_vision/: model.ipynb
spice_vision/utils/: _validation.py  config.json
