[project]
name = "spice-vision"
version = "0.1.0"
description = "Food Classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.4",
    "numpy>=2.2.6", 
    "pillow>=12.0.0", 
    "torchvision>=0.24.0", 
    "torch>=2.9.0", 
    "datasets>=4.4.1", 
    "transformers>=4.57.1"
]

[project.optional-dependencies]
test = ["pytest>=9.0.1",]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "UP", # pyupgrade
]

ignore = [
    "E501", # line-too-long
]